# PitchBrick

./: .gitignore  Cargo.toml  README.md  build.rs  install.bat
src/: app.rs  autostart.rs  config.rs  main.rs  ptt.rs  shortcut.rs  tray.rs  update.rs  vocal_rest.rs  vr.rs
src/audio/: analysis.rs  capture.rs  devices.rs  mod.rs  playback.rs
src/ui/: display.rs  log_window.rs  menu.rs  mod.rs  ptt_dialog.rs  settings_window.rs  shortcut_window.rs  update_window.rs  vr_dialog.rs
