[package]
name = "pitchbrick"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Transgender vocal training pitch monitor"
repository = "https://github.com/Heretyc/PitchBrick"
keywords = ["voice", "pitch", "transgender", "vocal-training", "audio"]
categories = ["multimedia::audio"]

[dependencies]
iced = { version = "0.14", features = ["canvas", "tokio"] }
iced_aw = { version = "0.13", default-features = false, features = ["menu"] }
cpal = "0.17"
realfft = "3.5"
rustfft = "6.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
notify = "8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging"] }
