[package]
name = "pitchbrick"
version = "2.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Transgender vocal training pitch monitor"
repository = "https://github.com/Heretyc/PitchBrick"
readme = "README.md"
keywords = ["voice", "pitch", "transgender", "vocal-training", "audio"]
categories = ["multimedia::audio", "gui", "accessibility"]
include = [
    "src/**",
    "LICENSE",
    "README.md",
    "Cargo.lock",
]

[dependencies]
iced = { version = "0.14", features = ["canvas", "tokio"] }
cpal = "0.17"
realfft = "3.5"
rustfft = "6.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging"] }
tray-icon = "0.21"
