[package]
name = "pitchbrick"
version = "2.4.0"
edition = "2021"
license = "Apache-2.0"
description = "Transgender vocal training pitch monitor"
repository = "https://github.com/Heretyc/PitchBrick"
homepage = "https://www.patreon.com/cw/lexi_bytes"
readme = "README.md"
keywords = ["voice", "pitch", "transgender", "vocal-training", "audio"]
categories = ["multimedia::audio", "gui", "accessibility"]
include = [
    "src/**",
    "sounds/**",
    "docs/logo.ico",
    "docs/vr-mode.ico",
    "build.rs",
    "LICENSE",
    "README.md",
    "Cargo.lock",
]

[features]
default = ["vr-overlay"]
vr-overlay = ["dep:libloading"]

[dependencies]
iced = { version = "0.14", features = ["canvas", "tokio"] }
cpal = "0.17"
realfft = "3.5"
rustfft = "6.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
libloading = { version = "0.8", optional = true }
ureq = "2"
serde_json = "1"
semver = "1"
rodio = { version = "0.19", default-features = false, features = ["wav"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Registry", "Win32_UI_Shell", "Win32_System_Com", "Win32_Storage_FileSystem", "Win32_System_Diagnostics_ToolHelp", "Win32_Foundation"] }
tray-icon = "0.21"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
